--- a/SlackAPI.html
+++ b/SlackAPI.html
@@ -7,6 +7,11 @@
         </head>
         <body>
         <div class="BackGround"></div>
-        <div class="messagesContainer"></div>
+        <div class="boxContainer" scrolling="no"></div>
+        <div class = "textEditor">
+        <textarea id="textbox" rows="4" style="font-size:30px;" cols=314%></textarea>
+        <input type="submit" value="送信"  onclick="sendMessage()" style="font-size:30px;">
+        <a class="point" href="SlackAPIDescription.html">このwebぺージについて</a>
+        </div>
         </body>
 </html>
